Added enforce_delay to config

--- a/etc/chakora.conf.example
+++ b/etc/chakora.conf.example
@@ -80,6 +80,7 @@ nickserv {
 	user = NickServ
 	host = technoirc/Services/NickServ
 	real = "Nickname Services"
+	enforce_delay = 30;
 }
 
 operserv {
