--- a/etc/chakora.conf.example
+++ b/etc/chakora.conf.example
@@ -12,8 +12,8 @@ me {
 
 # The server block is information about the ircd and linking
 server {
-	# inspircd or charybdis
-	ircd = inspircd
+	# inspircd12 or charybdis
+	ircd = inspircd12
 	# The name/ip of our hub
 	host = some.server.tld
 	# IP to bind to, 0.0.0.0 should usually be fine
