* Added INCLUDE for including the powers of a different set in soper.conf. * OperServ follow the rules of the new services oper configuration. * Completed example sevices oper config: soper.conf.example * Changed how services oper powersets are kept.

--- a/etc/soper.conf.example
+++ b/etc/soper.conf.example
@@ -1,8 +1,20 @@
 # Chakora example services oper configuration file
 
-BOF sra
+BOF oper
 operserv:global
-EOF sra
+EOF
+
+BOF admin
+chanserv:can_override
+operserv:update
+INCLUDE oper
+EOF
+
+BOF sra
+operserv:mod_
+operserv:svs:run
+INCLUDE admin
+EOF
 
 SOPER starcoder sra
 SOPER MattB sra
