--- a/etc/soper.conf.example
+++ b/etc/soper.conf.example
@@ -7,7 +7,9 @@ nickserv:fullinfo
 EOF
 
 BOF admin
-chanserv:can_override
+chanserv:override
+nickserv:override
+hostserv:override
 operserv:update
 INCLUDE oper
 EOF
