--- a/etc/modules.conf.example
+++ b/etc/modules.conf.example
@@ -15,6 +15,7 @@ load "chanserv/set";             # SET: Set core settings on a channel. (flag +s
 load "chanserv/voice";           # VOICE: Allow one to voice (him/her)self or another user. (flag +v)
 load "chanserv/mute";		 # MUTE: Allows one to mute (him/her)self or another user. (flag +M)
 load "chanserv/clear";		 # CLEAR: Allows one to CLEAR flags, bans, or users in a channel. (flag +C)
+load "chanserv/mode";		 # MODE: Allows one to set modes on a channel using ChanServ. (flag +c)
 
 # Global   - Network global announcer.
 load "global/main";               # Create Global to send global notices from a separate nick rather than OperServ.
