Updated to Include chanserv/ban and chanserv/kickban

--- a/etc/modules.conf.example
+++ b/etc/modules.conf.example
@@ -17,6 +17,8 @@ load "chanserv/mute";		 # MUTE: Allows one to mute (him/her)self or another user
 load "chanserv/clear";		 # CLEAR: Allows one to CLEAR flags, bans, or users in a channel. (flag +C)
 load "chanserv/mode";		 # MODE: Allows one to set modes on a channel using ChanServ. (flag +c)
 load "chanserv/kick";		 # KICK: Allows one to kick a user on a channel using ChanServ. (flag +k)
+load "chanserv/ban";			 # BAN: Allows one to ban a user on a channel using ChanServ. (flag +k)
+load "chanserv/kickban";		 # KICKBAN: Allows one to kick and ban a user on a channel using ChanServ. (flag +k)
 
 # Global   - Network global announcer.
 load "global/main";               # Create Global to send global notices from a separate nick rather than OperServ.
