--- a/etc/chakora.conf.example
+++ b/etc/chakora.conf.example
@@ -1,4 +1,7 @@
 # Chakora configuration file
+#
+# Copyright (c) 2010 The Chakora Project. All rights reserved.
+# This software is free software; rights to this config are stated in docs/LICENSE.
 
 # Me block is information on this Chakora instance
 me {
