Added chanserv:fantasy_char to the default config.

--- a/etc/chakora.conf.example
+++ b/etc/chakora.conf.example
@@ -82,6 +82,8 @@ chanserv {
 	user = ChanServ
 	host = technoirc/Services/ChanServ
 	real = "Channel Services"
+	# Character for fantasy commands. e.g. ! . @
+	fantasy_char = !
 }
 
 nickserv {
