--- a/etc/chakora.conf.example
+++ b/etc/chakora.conf.example
@@ -65,7 +65,7 @@ services {
 	# Allow the use of fantasy - not using fantasy saves some resources.
 	use_fantasy = 1
 }
-
+#The enc block is information on database encryption
 enc {
 	# Encryption method.
 	#    none - No encryption. Users will be warned of this.
@@ -132,6 +132,13 @@ global {
 	user = Global
 	host = technoirc/Services/Global
 	real = "Global Noticer"
+}
+xop {
+	qop = "+QOqaohvLkMtisC"
+	sop = "+AOaohvLkMtis"
+	aop = "+OohvLkMti
+	hop = "+HhvLkMti"
+	vop = "+VvL"
 }
 
 # End configuration file
