--- a/etc/chakora.conf.example
+++ b/etc/chakora.conf.example
@@ -83,6 +83,7 @@ botserv {
 	user = BotServ
 	host = technoirc/Services/BotServ
 	real = "Bot Services"
+	#
  
 }
 chanserv {
@@ -92,6 +93,12 @@ chanserv {
 	real = "Channel Services"
 	# Character for fantasy commands. e.g. ! . @
 	fantasy_char = !
+}
+infoserv {
+	nick = InfoServ
+	user = InfoServ
+	host = techoirc/Services/InfoServ
+	real = "Help Services"
 }
 
 nickserv {
