For those who are incapable of editing the config, dnsbl.swiftbl.net has been changed to dnsbl.swiftbl.org as this would of killed innocent users due to a bug

--- a/contrib/russellb28/dnsbl/dnsbl.conf.example
+++ b/contrib/russellb28/dnsbl/dnsbl.conf.example
@@ -4,7 +4,7 @@ list
 	2 = dnsbl.infinityirc.com
 	3 = tor.dnsbl.sectoor.de
 	4 = dnsbl.dronebl.org
-	5 = dnsbl.swiftbl.net
+	5 = dnsbl.swiftbl.org
 	6 = rbl.efnet.org
 	7 = dnsbl.proxybl.org
 	8 = tor.dan.me.uk
